# stardust-snapshot

./: 0snapshot.json  Cargo.toml  README.md
src/: main.rs  snapshot.rs
