[package]
name = "stardust-snapshot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bee-block = { git = "https://github.com/Thoralf-M/bee", rev = "2968ad796a52ef690b673a7d47ad1ecfa7e1c018", features = ["dto"] }
bee-ledger = { git = "https://github.com/Thoralf-M/bee", rev = "2968ad796a52ef690b673a7d47ad1ecfa7e1c018" }
bee-tangle = { git = "https://github.com/Thoralf-M/bee", rev = "2968ad796a52ef690b673a7d47ad1ecfa7e1c018" }
packable = { version = "0.4.0", default-features = false, features = [ "serde", "primitive-types" ] }
tokio = { version = "1.24.2", features = ["macros", "rt", "rt-multi-thread"] }
serde = "1.0.152"
serde_json = "1.0.91"
